--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Git Practice</h1>
     <h2>this is zoe's commit</h2>
     <h3>this is zoe's 2nd commit</h3>
+    <h4>this is zoe's 3nd commit</h4>
 </body>
 </html>
